--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="col-m-12">
+        <app-navbar></app-navbar>
+    </div>
+        <router-outlet></router-outlet>
+</div>
