--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
+// @import "bootstrap/scss/bootstrap.scss";
+// Font Awesome
+@import '@fortawesome/fontawesome-free/css/all.css';
+
+// MDB SCSS
+@import "../node_modules/mdb-angular-ui-kit/assets/scss/mdb.scss";
+
+@import url("https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900");
