Login ekranı iyileştirmeleri & Login durumuna göre navbarın etkinleşmesi. Dropdown'ın kullanıcıya göre şekillenmesi.

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -37,9 +37,8 @@
               <span class="nav-link" id="search-addon" style="position: relative;">
                 <i (click)="toggleSearch()" class="fas fa-search" style="cursor: pointer;"></i>
               </span>
-        </li>
-    
-    <!-- SearchBar -->
+        </li><!-- SearchBar -->
+
       <!-- Right elements -->
         <!-- Notifications -->
         <li mdbDropdown class="nav-item dropdown">
@@ -58,23 +57,32 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </li>
           </ul>
-        </li> 
-        <!-- Notifications -->
+        </li> <!-- Notifications -->
         <!-- Avatar -->
-        <li mdbDropdown class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdownMenuLink" role="button" mdbDropdownToggle aria-expanded="false">
-            <i class="fas fa-user"></i>
-          </a>
-          <ul mdbDropdownMenu class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-            <li>
-              <a class="dropdown-item" href="#">Profil</a>
-            </li>
-            <li>
-              <a class="dropdown-item" (click)="openModal()" routerLink="#" >Çıkış Yap</a>
-            </li>
-          </ul>
-        </li>
+        <ng-container *ngIf="isLoggedIn; else loggedOut">
+          <li mdbDropdown class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdownMenuLink" role="button" mdbDropdownToggle aria-expanded="false">
+              <i class="fas fa-user"></i>
+            </a>
+            <ul mdbDropdownMenu class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+              <li>
+                <a class="dropdown-item" routerLink="/profile">Profil</a>
+              </li>
+              <li>
+                <a class="dropdown-item" routerLink="/settings"><i class="fas fa-cogs fa-fw me-2"></i>Ayarlar</a>
+              </li>
+              <li>
+                <a class="dropdown-item" routerLink="#" (click)="openModal()">Çıkış Yap</a>
+              </li>
+            </ul>
+          </li>
+        </ng-container>
         </ul></div></nav></div></nav>
         <!-- Avatar -->
-
+        <ng-template #loggedOut>
+          <li mdbDropdown class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle hidden-arrow" routerLink="/login" id="navbarDropdownMenuLink" role="button" mdbDropdownToggle aria-expanded="false">
+              <i class="fas fa-user"></i>
+            </a>
+          </li></ng-template>
       <!-- Right elements -->
