--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-
-        <app-navbar></app-navbar>
- 
-        <router-outlet></router-outlet>
+<ng-container *ngIf="isLoggedIn || isHomePage(); else Navi">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+</ng-container>
+<ng-template #Navi>
+    <router-outlet></router-outlet>
+</ng-template>
