--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,13 +1,13 @@
-<div id="wrapper" class="fade-in">
-  <div class="container">
-    <div class="row justify-content-center">
+<div class="login-bg-image">
+  <div class="container-fluid" style="position: relative; overflow-y: auto; height: 100vh;">
+    <div class="row justify-content-center align-items-center" style="height: 100%;">
       <div class="col-md-12">
         <div class="card login-container">
-          <mdb-tabs [pills]="true" [fill]="true">
-            <mdb-tab title="Login">
+            <mdb-tabs [pills]="true" [fill]="true">
+            <mdb-tab title="Giriş yap">
               <form>
                 <div class="text-center mb-3">
-                  <p>Sign in with:</p>
+                  <p>Giriş yapmak için aşağıdaki hesapları kullan:</p>
                   <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
                     <i class="fab fa-facebook-f"></i>
                   </button>
@@ -25,14 +25,14 @@
                   </button>
                 </div>
 
-                <p class="text-center">or:</p>
+                <p class="text-center">ya da kullanıcı girişi yap</p>
 
                 <!-- Email input -->
                 <form [formGroup]="loginForm">
                   <div class="form-group">
                     <mdb-form-control class="mb-4">
                       <input mdbInput formControlName="email" type="email" id="logiNE" class="form-control" />
-                      <label mdbLabel class="form-label" for="logiNE">Email</label>
+                      <label mdbLabel class="form-label" for="logiNE">Email/Kullanıcı adı</label>
                     </mdb-form-control>
                   </div>
 
@@ -40,7 +40,7 @@
                   <div class="form-group">
                     <mdb-form-control class="mb-4">
                       <input mdbInput formControlName="password" type="password" id="loginP" class="form-control" />
-                      <label mdbLabel class="form-label" for="loginP">Password</label>
+                      <label mdbLabel class="form-label" for="loginP">Şifre</label>
                     </mdb-form-control>
                   </div>
 
@@ -51,31 +51,26 @@
                       <div class="form-check mb-3 mb-md-0">
                         <input mdbCheckbox class="form-check-input" type="checkbox" value="" id="loginCheck"
                           [checked]="false" />
-                        <label class="form-check-label" for="loginCheck"> Beni hatırla </label>
+                        <label class="form-check-label" for="loginCheck">Beni hatırla!</label>
                       </div>
                     </div>
 
                     <div class="col-md-6 d-flex justify-content-center">
                       <!-- Simple link -->
-                      <a routerLink="#!">Forgot password?</a>
+                      <a routerLink="#!">Şifreni mi unuttun?</a>
                     </div>
                   </div>
 
                   <!-- Submit button -->
-                  <button mdbRipple type="submit" class="btn btn-primary btn-block mb-4" (click)="login()"> Giriş Yap
-                  </button>
+                  <button mdbRipple type="submit" class="btn btn-outline-primary btn-rounded col-md-12"
+                    (click)="login()"> Giriş Yap</button>
                 </form>
-
-                <!-- Register buttons -->
-                <div class="text-center">
-                  <p>Not a member? <a routerLink="#!">Register</a></p>
-                </div>
               </form>
             </mdb-tab>
-            <mdb-tab title="Register">
+            <mdb-tab title="Kayıt Ol">
               <form>
                 <div class="text-center mb-3">
-                  <p>Sign up with:</p>
+                  <p>Kayıt olmak için aşağıdaki hesapları kullan:</p>
                   <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
                     <i class="fab fa-facebook-f"></i>
                   </button>
@@ -93,7 +88,7 @@
                   </button>
                 </div>
 
-                <p class="text-center">or:</p>
+                <p class="text-center">ya da:</p>
 
                 <!-- Name input -->
                 <form [formGroup]="registerForm">
@@ -120,10 +115,11 @@
                   </mdb-form-control>
                   <!-- ID input -->
                   <mdb-form-control class="mb-4">
-                    <input mdbInput formControlName="nationalIdentity" type="text" id="registerID" class="form-control" maxlength="11" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 11)" />
+                    <input mdbInput formControlName="nationalIdentity" type="text" id="registerID" class="form-control"
+                      maxlength="11" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 11)" />
                     <label mdbLabel class="form-label" for="registerID">Kimlik</label>
                   </mdb-form-control>
-                  
+
                   <!-- Birth input -->
                   <mdb-form-control class="mb-4">
                     <input mdbInput formControlName="dateOfBirth" type="date" id="registerDate" class="form-control" />
@@ -131,35 +127,37 @@
                   </mdb-form-control>
                   <!-- about input -->
                   <mdb-form-control class="mb-4">
-                    <textarea mdbInput formControlName="about" type="date" id="registerAbout" class="form-control"> </textarea>
+                    <textarea mdbInput formControlName="about" type="date" id="registerAbout"
+                      class="form-control"> </textarea>
                     <label mdbLabel class="form-label" for="registerAbout">Hakkımda</label>
                   </mdb-form-control>
                   <!-- Password input -->
                   <mdb-form-control class="mb-4">
-                    <input mdbInput formControlName="password" type="password" id="registerPassword" class="form-control" />
-                    <label mdbLabel class="form-label" for="registerPassword">Password</label>
+                    <input mdbInput formControlName="password" type="password" id="registerPassword"
+                      class="form-control" />
+                    <label mdbLabel class="form-label" for="registerPassword">Şifre</label>
                   </mdb-form-control>
 
                   <!-- Repeat Password input -->
                   <mdb-form-control class="mb-4">
-                    <input formControlName="passwordConfirm" mdbInput type="password" id="registerRepeatPassword" class="form-control" />
-                    <label mdbLabel class="form-label" for="registerRepeatPassword">Repeat password</label>
+                    <input formControlName="passwordConfirm" mdbInput type="password" id="registerRepeatPassword"
+                      class="form-control" />
+                    <label mdbLabel class="form-label" for="registerRepeatPassword">Şifreyi tekrarla</label>
                   </mdb-form-control>
 
                   <!-- Checkbox -->
                   <div class="form-check d-flex justify-content-center mb-4">
-                    <input mdbCheckbox formControlName="isConfirm" class="form-check-input me-2" type="checkbox" value="" id="registerCheck" [checked]="true" aria-label="registerCheckHelpText" />
-                    <label class="form-check-label" for="registerCheck"> I have read and agree to the terms</label>
+                    <input mdbCheckbox formControlName="isConfirm" class="form-check-input me-2" type="checkbox"
+                      value="" id="registerCheck" [checked]="true" aria-label="registerCheckHelpText" />
+                    <label class="form-check-label" for="registerCheck" routerLink="#">Şartları okudum ve kabul
+                      ediyorum.</label>
                   </div>
 
                   <!-- Submit button -->
-                  <button mdbRipple type="submit" class="btn btn-primary btn-block mb-3" (click)="register()">Sign in</button>
+                  <button mdbRipple type="submit" class="btn btn-outline-primary btn-rounded col-md-12"
+                    (click)="register()">Kayıt ol</button>
                 </form>
               </form>
             </mdb-tab>
           </mdb-tabs>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+        </div></div></div></div>
