--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,25 +1,44 @@
-
 body {
-    background-color: #f8f9fa;
-  }
-  .login-container {
-    max-width: 400px;
-    margin: 100px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-  }
-  .login-container .card-header {
-    background-color: #007bff;
-    color: #fff;
-    border-radius: 10px 10px 0 0;
-  }
-  .login-container .card-footer {
-    background-color: #f8f9fa;
-    border-top: none;
-  }
-  .centered {
-    margin:0 auto 0 auto;
-    text-align:center;
-    }
+  background-color: #f8f9fa;
+}
+
+.login-container {
+  max-width: 400px;
+  margin: 200px auto;
+  padding: 25px;
+  background-color: #fff;
+  border-radius: 25px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.login-container .card-header {
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 10px 10px 0 0;
+}
+
+.login-container .card-footer {
+  background-color: #f8f9fa;
+  border-top: none;
+}
+
+.centered {
+  text-align: center;
+}
+
+.login-bg-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #212931;
+  background-image: url("../../../assets/images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../../assets/images/bg.jpg");
+  background-size: auto, auto, cover;
+  background-position: center, center, top center;
+  background-repeat: repeat, no-repeat, no-repeat;
+  background-attachment: scroll, scroll, scroll;
+  z-index: -1;
+}
+
+
