--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,4 @@
-
+@import url("https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900");
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -109,13 +109,13 @@ input, select, textarea {
 /* Type */
 
 	html {
-		font-size: 16pt;
+		font-size: 12pt;
 	}
 
 		@media screen and (max-width: 1680px) {
 
 			html {
-				font-size: 12pt;
+				font-size: 10pt;
 			}
 
 		}
@@ -123,7 +123,7 @@ input, select, textarea {
 		@media screen and (max-width: 1280px) {
 
 			html {
-				font-size: 11pt;
+				font-size: 12pt;
 			}
 
 		}
@@ -2323,7 +2323,7 @@ input, select, textarea {
 
 		}
 
-	input[type="text"],
+	/*input[type="text"],
 	input[type="password"],
 	input[type="email"],
 	select,
@@ -2540,7 +2540,7 @@ input, select, textarea {
 
 	.formerize-placeholder {
 		color: #909498 !important;
-	}
+	}*/
 
 /* Icon */
 
@@ -3221,13 +3221,13 @@ input, select, textarea {
 	}
 
 		#wrapper > .bg {
-			position: absolute;
-			top: 0;
-			left: 0;
+			position: fixed;
+			top: 1;
+			left: 1;
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../assets/images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../assets/images/bg.jpg");
+			background-image: url("../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../images/bg.jpg");
 			background-size: auto,								auto,														100% auto;
 			background-position: center,								center,														top center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
