--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,7 @@
 // MDB SCSS
 @import "../node_modules/mdb-angular-ui-kit/assets/scss/mdb.scss";
 
-@import url("https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900");
+.navbar-container {
+    max-width: 50%; 
+    margin: 0 auto; 
+}
