--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -1,40 +1,28 @@
 <div>
-  <form [formGroup]="getByIdForm">
+  <form [formGroup]="deleteBootcampStateForm">
     <label>Listenelecek Bootcamp Idsi</label>
     <input formControlName="id" type="number" >
-    <button type="submit" class="btn btn-primary" (click)="getByIdBootcamp()">Submit</button>
+    <button type="submit" class="btn btn-primary" (click)="deleteBootcampStateFunc()">Submit</button>
   </form>
 </div>
-
-
-
 <div class="container">
-  <form [formGroup]="updateForm">
+  <form [formGroup]="updateBootcampStateForm">
     <div class="form-group">
       <label for="exampleInputEmail1">id</label>
-      <input formControlName="id" type="number" class="form-control" id="exampleInputEmail122" aria-describedby="emailHelp" placeholder="Enter email">
+      <input formControlName="id" type="text" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp" placeholder="Enter email">
     </div>
     <div class="form-group">
       <label for="exampleInputEmail1">name</label>
       <input formControlName="name" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">instructorId</label>
-      <input formControlName="instructorId" type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">bootcampstateId</label>
-      <input formControlName="bootcampstateId" type="number" class="form-control" id="exampleInputPassword2" placeholder="Password">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Başlama tarihi</label>
-      <input formControlName="startDate" type="date" class="form-control" id="exampleInputPassword4" placeholder="Password">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Bitiş tarihi</label>
-      <input formControlName="endDate" type="date" class="form-control" id="exampleInputEmail5" aria-describedby="emailHelp" placeholder="Enter email">
-    </div>
-    <button type="submit" class="btn btn-primary" (click)="updateFunc()">Submit</button>
+    <button type="submit" class="btn btn-primary" (click)="updateBootcampStateFunc()">Submit</button>
   </form>
+</div>
+
+<div>
+  <li *ngFor="let state of bootcampStateList.items"> 
+  <span class="badge">{{state.id}}</span>
+  <span class="name">{{state.name}}</span>
+</li>
 </div>
